[Gradle] Test CompletableFuture and MappedFuture with lincheck
^KT-63536